Fixed icon in window buttons being misaligned

--- a/src/app/haven-window/haven-window-component/haven-window.component.css
+++ b/src/app/haven-window/haven-window-component/haven-window.component.css
@@ -89,6 +89,7 @@
   width: 20px;
   font-size: 16px;
   font-weight: bold;
+  vertical-align: baseline;
 }
 
 /* Transparrent Slider */
